col_numbers commit

--- a/css/12_bool.css
+++ b/css/12_bool.css
@@ -10,7 +10,7 @@
   border: 1px solid red;
 }
 .debug [class*='col_']{
-  border: 1px solid green;
+  border: 1px solid black;
   height: 100px;
 }
 /*/debug_rules*/
