--- a/css/12_bool.css
+++ b/css/12_bool.css
@@ -114,7 +114,7 @@
 }
 /*/from_0_to_767px_smartphone*/
 /*from_768px_to_991_tablet*/
-@media screen and (min-width:768px max-width:991px) {
+@media screen and (min-width:768px) and (max-width:991px) {
   .col_md_1{
     width: calc( ( 100% / 12) * 1 );
   }
